# ap

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  build.sh  dev  dev.sh  index.ts  lib.rs  netlify.toml  package-lock.json  package.json  preview.sh  rsbuild.config.ts  tailwind.config.ts  tsconfig.json  update
assets/: tailwind.css
bash/: build.sh  dev.sh
rust/: Cargo.toml  index.rs
rust/templates/: index.html
src/: Cargo.toml  app.rs  environment.rs  http.rs  index.html  index.ts  macros.rs  main.rs  route.rs  router.rs  templates.rs
src/assets/: index.css  input.css
src/components/: dogs.rs  echo.rs  mod.rs  navbar.rs
src/layout/: default.html  default.jinja  index.jinja
src/pages/: home.jinja  home.rs  index.html  mod.rs
src/pages/about/: mod.rs
src/pages/article/: mod.rs
src/pages/blog/: index.jinja  mod.rs
src/pages/blog/article/: index.jinja  mod.rs
src/pages/fallback/: index.jinja  mod.rs
src/pages/home/: index.jinja  mod.rs
src/pkg/: index_bg.wasm  package.json
src/router/: api_routes.rs  mod.rs  page_routes.rs  source_routes.rs
src/static/: index.css
src/wasm/: index.d.ts  index.js  index_bg.wasm.d.ts
wasm/: Cargo.toml  lib.rs
