[package]
name = "ap"
version = "1.0.0"
edition = "2021"
description = "ap"
authors = ["Daniele Falchetti <danielefalche@gmail.com>"]
license = "MIT"
repository = "https://github.com/falcosan/ap"

[dependencies]
axum = "0.8"
ureq = "3.0.6"
minijinja = "2"
dotenv = "0.15.0"
chrono = "0.4.40"
tower-layer = "0.3"
serde_json = "1.0.139"
pulldown-cmark = "0.13"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
tower-http = { version = "0.6.2", features = ["fs", "cors", "normalize-path"] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"
