[package]
name = "ap"
version = "1.0.0"
edition = "2021"
description = "ap"
authors = ["Daniele Falchetti <danielefalche@gmail.com>"]
license = "MIT"
repository = "https://github.com/falcosan/ap"

[dependencies]
htmd = "0.5"
axum = "0.8"
serde_json = "1"
dotenv = "0.15.0"
chrono = "0.4.45"
tower-layer = "0.3"
minijinja = { version = "2", features = ["speedups"] }
pulldown-cmark = { version = "0.13", features = ["simd"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
  "http2",
  "gzip",
  "brotli",
] }
tower-http = { version = "0.6.11", features = [
  "fs",
  "cors",
  "normalize-path",
  "compression-gzip",
  "compression-br",
] }

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
