[package]
name = "ap"
version = "1.4.7"
edition = "2021"
description = "ap"
authors = ["Daniele Falchetti <danielefalche@gmail.com>"]
license = "MIT"
repository = "https://github.com/falcosan/ap"

[lib]
path = "index.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Document", "Element"] }

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
panic = "abort"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz"]
